fix html form add for and id in label and input

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -58,17 +58,16 @@
             <div class="formData">
               <label for="firstname">Prénom</label><br>
               <input class="text-control" type="text" id="firstname" placeholder='Votre Prénom' name="firstname"
-                minlength="2" required />
+                minlength="2"/>
               <br>
             </div>
             <div class="formData">
               <label for="lastname">Nom</label><br>
-              <input class="text-control" type="text" id="lastname" placeholder="Votre Nom" name="lastname"
-                required /><br>
+              <input class="text-control" type="text" id="lastname" placeholder="Votre Nom" name="lastname"/><br>
             </div>
             <div class="formData">
               <label for="email">E-mail</label><br>
-              <input class="text-control" type="email" id="email" placeholder="Votre email" name="email" required /><br>
+              <input class="text-control" type="email" id="email" placeholder="Votre email" name="email"/><br>
             </div>
             <div class="formData">
               <label for="birthdate">Date de naissance</label><br>
