--- a/index.html
+++ b/index.html
@@ -57,22 +57,24 @@
           <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData">
               <label for="firstname">Prénom</label><br>
-              <input class="text-control" type="text" id="firstname" placeholder="Votre Prénom" name="firstname" minlength="2"/>
+              <input class="text-control" type="text" id="firstname" placeholder='Votre Prénom' name="firstname"
+                minlength="2"/>
+              <br>
               <p class="error-message" id="error-firstname"></p>
             </div>
             <div class="formData">
               <label for="lastname">Nom</label><br>
-              <input class="text-control" type="text" id="lastname" placeholder="Votre Nom" name="lastname" minlength="2"/>
+              <input class="text-control" type="text" id="lastname" placeholder="Votre Nom" name="lastname"/><br>
               <p class="error-message" id="error-lastname"></p>
             </div>
             <div class="formData">
               <label for="email">E-mail</label><br>
-              <input class="text-control" type="email" id="email" placeholder="Votre email" name="email"/>
+              <input class="text-control" type="email" id="email" placeholder="Votre email" name="email"/><br>
               <p class="error-message" id="error-email"></p>
             </div>
             <div class="formData">
               <label for="birthdate">Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate"/>
+              <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
               <p class="error-message" id="error-birthdate"></p>
             </div>
             <div class="formData">
@@ -80,32 +82,52 @@
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               <p class="error-message" id="error-quantity"></p>
             </div>
-            <p class="text-label">À quel tournoi souhaitez-vous participer cette année ?</p>
+            <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
             <div class="formData">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
-              <label class="checkbox-label" for="location1">New York</label>
+              <label class="checkbox-label" for="location1">
+                <span class="checkbox-icon"></span>
+                New York</label>
               <input class="checkbox-input" type="radio" id="location2" name="location" value="San Francisco" />
-              <label class="checkbox-label" for="location2">San Francisco</label>
+              <label class="checkbox-label" for="location2">
+                <span class="checkbox-icon"></span>
+                San Francisco</label>
               <input class="checkbox-input" type="radio" id="location3" name="location" value="Seattle" />
-              <label class="checkbox-label" for="location3">Seattle</label>
+              <label class="checkbox-label" for="location3">
+                <span class="checkbox-icon"></span>
+                Seattle</label>
               <input class="checkbox-input" type="radio" id="location4" name="location" value="Chicago" />
-              <label class="checkbox-label" for="location4">Chicago</label>
+              <label class="checkbox-label" for="location4">
+                <span class="checkbox-icon"></span>
+                Chicago</label>
               <input class="checkbox-input" type="radio" id="location5" name="location" value="Boston" />
-              <label class="checkbox-label" for="location5">Boston</label>
+              <label class="checkbox-label" for="location5">
+                <span class="checkbox-icon"></span>
+                Boston</label>
               <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland" />
-              <label class="checkbox-label" for="location6">Portland</label>
-              <p class="error-message" id="error-location"></p>
+              <label class="checkbox-label" for="location6">
+                <span class="checkbox-icon"></span>
+                Portland</label>
+                <p class="error-message" id="error-location"></p>
             </div>
+
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" required />
-              <label class="checkbox2-label" for="checkbox1">J'ai lu et accepté les conditions d'utilisation.</label>
-              <p class="error-message" id="error-checkbox1"></p>
+              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
+              <label class="checkbox2-label" for="checkbox1" required>
+                <span class="checkbox-icon"></span>
+                J'ai lu et accepté les conditions d'utilisation.
+              </label>
               <br>
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
-              <label class="checkbox2-label" for="checkbox2">Je souhaite être prévenu des prochains évènements.</label>
+              <label class="checkbox2-label" for="checkbox2">
+                <span class="checkbox-icon"></span>
+                Je Je souhaite être prévenu des prochains évènements.
+              </label>
+              <br>
+              <p class="error-message" id="error-checkbox"></p>
             </div>
-            <input class="btn-submit" type="submit" value="C'est parti" />
-          </form>          
+            <input class="btn-submit" type="submit" class="button" value="C'est parti" />
+          </form>
         </div>
       </div>
     </div>
