update js script and html

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
         </div>
       </div>
     </div>
+    <!-- Modal pour le message de confirmation -->
+<div id="modal-confirmation" class="modal-confirmation">
+  <div class="modal-confirmation-content">
+    <p>Merci ! Votre réservation a été reçue.</p>
+    <button id="close-modal-confirmation">OK</button>
+  </div>
   </main>
   <footer>
     <p class="copyrights">
