fix html and js form

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             </div>
 
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
-              <label class="checkbox2-label" for="checkbox1" required>
+              <input class="checkbox-input" type="checkbox" id="checkbox" checked />
+              <label class="checkbox2-label" for="checkbox" required>
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
               </label>
@@ -126,7 +126,7 @@
               <br>
               <p class="error-message" id="error-checkbox"></p>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti"/>
+            <input id="btnSubmit" class="btn-submit" type="submit" class="button" value="C'est parti"/>
           </form>
         </div>
          <!-- Modal pour le message de confirmation -->
